Setting up some OpenAPI calls and directories
