# Sources/Gazou/Handlers/ManifestHandler.swift
@@ -1,0 +1,9 @@
+extension ManifestHandler {
+    func getManifest(_ input: Operations.getManifest.Input) async throws -> Operations.getManifest.Output {
+        fatalError("Not done yet")
+    }
+    
+    func existsManifest(_ input: Operations.existsManifest.Input) async throws -> Operations.existsManifest.Output {
+        fatalError("Not done yet")
+    }
+}
